--- a/cnab240/756/remessa/detalhe_segmento_q.yml
+++ b/cnab240/756/remessa/detalhe_segmento_q.yml
@@ -2,3 +2,8 @@ codigo_segmento:
   pos: [14, 14]
   picture: 'X(1)'
   default: 'Q'
+
+codigo_banco_correspondente:
+  pos: [210, 212]
+  picture: 'X(3)'
+  default: '000'
