adicionando data limite na geração da remessa do sicoob

--- a/cnab240/756/remessa/detalhe_segmento_p.yml
+++ b/cnab240/756/remessa/detalhe_segmento_p.yml
@@ -43,3 +43,8 @@ nosso_numero:
   # Segmento T (ver Nota G072).
   pos: [38,57]
   picture: 'X(20)'
+
+prazo_baixa:
+  pos: [225, 227]
+  picture: 'X(3)'
+  default: ''
