feat: motivo ocorrencia

--- a/cnab240/generic/retorno/detalhe_segmento_t.yml
+++ b/cnab240/generic/retorno/detalhe_segmento_t.yml
@@ -111,9 +111,9 @@ valor_tarifa:
   pos: [199, 213]
   picture: '9(13)V9(2)'
 
-identificacao_rejeicao:
+motivo_ocorrencia:
   pos: [214, 223]
-  picture: '9(10)'
+  picture: 'X(10)'
 
 uso_exclusivo_febraban:
   pos: [224, 240]
