--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gilgleciodev/cnab_yaml",
+    "name": "trilote/cnab_yaml",
     "type": "library",
     "description": "Especificação do formato Cnab240 e Cnab400 traduzida para Yaml",
     "keywords": ["boleto", "remessa", "retorno", "cnab", "cnab240", "cnab400", "edi", "yaml"],
